--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,12 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php" : "^7.1",
-        "ext-trader" : "*"
+        "php" : "^8.1"
     },
     "autoload": {
         "psr-4": {
             "Doxadoxa\\PhpIndicators\\": "src/"
         }
     },
-    "version": "0.2"
+    "version": "0.3.0"
 }
